<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <android.support.v7.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:columnCount="4"
        app:rowCount="6">

        <EditText
            android:id="@+id/edtResultado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/resultado"
            android:inputType="text"
            app:layout_column="0"
            app:layout_columnSpan="4"
            app:layout_row="0" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_c"
            app:layout_column="0"
            app:layout_row="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_mm"
            app:layout_column="1"
            app:layout_row="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_porcentagem"
            app:layout_column="2"
            app:layout_row="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_dividir"
            app:layout_column="3"
            app:layout_row="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_sete"
            app:layout_column="0"
            app:layout_row="2" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_oito"
            app:layout_column="1"
            app:layout_row="2" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_nove"
            app:layout_column="2"
            app:layout_row="2" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_multiplicar"
            app:layout_column="3"
            app:layout_row="2" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_quatro"
            app:layout_column="0"
            app:layout_row="3" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_cinco"
            app:layout_column="1"
            app:layout_row="3" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_seis"
            app:layout_column="2"
            app:layout_row="3" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_subtrair"
            app:layout_column="3"
            app:layout_row="3" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_um"
            app:layout_column="0"
            app:layout_row="4" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_dois"
            app:layout_column="1"
            app:layout_row="4" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_tres"
            app:layout_column="2"
            app:layout_row="4" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_somar"
            app:layout_column="3"
            app:layout_row="4" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_zero"
            app:layout_column="0"
            app:layout_columnSpan="2"
            app:layout_gravity="fill_horizontal"
            app:layout_row="5" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_ponto"
            app:layout_column="2"
            app:layout_row="5" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_igual"
            app:layout_column="3"
            app:layout_row="5" />


    </android.support.v7.widget.GridLayout>

</LinearLayout>